# rp2040-embassy-template

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
