[package]
edition = "2021"
name = "rp2040-embessy-template"
version = "0.1.0"
resolver = "2"

[profile.release]
debug = 2

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver", "critical-section-impl"] }
